--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 
 <html>
 <head>
-    <title>Phan Ngon App</title>
+    <title>EasyAppDev 01 App</title>
 </head>
 
 <body>
     <div>
         <img src="logo.png" style="display:block ; margin: auto; margin-top:50px">
-        <h1 style="text-align: center; margin: 50px; font-size: 50px">WELCOME TO APP STUDIO</h1>
-        <h3 style="text-align: center; margin: 30px;"><a href="#">Privacy Policy</a>       <a href="#">Phan Ngon App Google Store</a></h3>
+        <h1 style="text-align: center; margin: 50px; font-size: 50px">WELCOME TO EasyAppDev 01 APP STUDIO</h1>
+        <h3 style="text-align: center; margin: 30px;"><a href="#">Privacy Policy</a>       <a href="#">EasyAppDev 01 App Google Store</a></h3>
     </div>
     <div class="copyright" style="text-align: center;">
-        &copy; Copyright <strong><span>Phan Ngon App Global</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>EasyAppDev 01 App Global</span></strong>. All Rights Reserved
       </div>
 </body>
 
